# WhatToEatVibecoding

./: .gitignore  CLAUDE.md  CREATE_PROJECT.md  Kickoff_Prompt_JamesL.md  README.md  pyproject.toml
config/: normalization_mappings.json  synthetic_data.json
data/pantry/: shelves_2026_03_18.csv  synthetic_pantry_2026-03-18.csv
data/receipts/: publix_2026_03_17.csv  synthetic_costco_2026-02-21.csv  synthetic_costco_2026-02-23.csv  synthetic_costco_2026-03-01.csv  synthetic_costco_2026-03-17.csv  synthetic_farmers_market_2026-03-01.csv  synthetic_farmers_market_2026-03-10.csv  synthetic_publix_2026-02-23.csv  synthetic_publix_2026-03-02.csv  synthetic_publix_2026-03-09.csv  synthetic_publix_2026-03-16.csv
docs/api/: auth_comparison.md  authenticated_api.md  simple_api.md
docs/data_models/: inventory.md  pantry.md  receipts.md  recipe_matching.md  recipes.md  shelf_life.md
docs/guides/: data_formats.md  jupyter_getting_started.md  synthetic_data.md  terminal_basics.md  using_the_app.md  weather_api.md
notebooks/: 01_data_exploration.ipynb  02_join_operations.ipynb  03_visualization.ipynb  04_data_cleaning.ipynb
prompts/: pantry_extraction.md  receipt_extraction.md  recipe_extraction.md
scripts/: seed_shelf_life.py
src/: __init__.py  database.py
workstream/: WS01_project_setup.md  WS02_recipe_ingestion.md  WS03_purchase_pantry_ingestion.md  WS04_data_cleaning_normalization.md  WS05_recipe_matching_views.md  WS06_simple_api.md  WS07_authenticated_api.md  WS08_streamlit_app.md  WS09_analytics_notebooks.md  WS10_synthetic_data.md  WS11_weather_integration.md
(+106 files in other folders)
