[project]
name = "whattoeatvibecoding"
version = "0.1.0"
description = "Educational vibecoding project: food inventory and recipe recommendation app"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "streamlit>=1.55.0",
    "uvicorn[standard]>=0.42.0",
]
